--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  width: 1440px;
+  width: 1300px;
+  height: 1024px;
   background-color: #F8F9FA;
 }
 
@@ -80,6 +81,10 @@ aside ul {
   border: 0px solid transparent;
   margin-bottom: 5px;
 }
+.list-ele a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
 
 .list-ele:hover {
   border: 0.1px solid transparent;
@@ -116,15 +121,21 @@ aside ul {
   height: 64px;
   position: absolute;
   top: 15px;
-  left: 1240px;
+  left: 1120px;
   margin-right: 8px;
   margin-right: 8px;
+}
+
+table {
+  height: 600px;
+  width: 1104px;
 }
 
 .cust_list {
   position: absolute;
   top: 115px;
   left: 300px;
+  width: 688px;
 }
 .cust_list h1 {
   font-size: 46px;
@@ -140,7 +151,7 @@ aside ul {
 }
 
 .dropdown {
-  position: relative;
+  position: absolute;
   display: inline-block;
   position: absolute;
   top: 260px;
@@ -215,6 +226,11 @@ table td {
   padding-bottom: 6px;
 }
 
+.down {
+  position: absolute;
+  top: 1085px;
+  left: 300px;
+}
 .down .button {
   height: 40px;
   width: 40px;
@@ -222,10 +238,6 @@ table td {
   border: 1.5px solid #CED4DA;
   border-radius: 8px;
   font-weight: 500;
-  position: relative;
-  left: 300px;
-  bottom: 112px;
-  z-index: 10;
 }
 .down .button:hover {
   border: 1.5px solid #0057FC;
@@ -237,10 +249,10 @@ table td {
   height: 40px;
   border: 1.5px solid #CED4DA;
   border-radius: 8px;
-  position: relative;
+  position: absolute;
   left: 600px;
   z-index: 10;
-  bottom: 152px;
+  top: 1085px;
 }
 
 .search-bar {
@@ -249,9 +261,9 @@ table td {
 .search-bar input {
   width: 320px;
   height: 40px;
-  position: relative;
-  bottom: 1031px;
-  left: 1180px;
+  position: absolute;
+  top: 260px;
+  left: 1040px;
   border-radius: 8px;
   border: 1px solid #CED4DA;
   padding-left: 16px;
